--- a/header/header.less
+++ b/header/header.less
@@ -3,18 +3,17 @@
 header {
     padding: 20px 100px;
     .d-col;
-
     .headerTop {
         .d-row;
         padding: 0 200px;
         padding-bottom: 15px;
         border-bottom: 1px solid #ececec;
-    
+
         &__logo {
             display: flex;
             flex-direction: column;
             text-decoration: none;
-    
+
             span {
                 &:nth-child(1) {
                     background: linear-gradient(90deg, #5134c4, #773cbc, #b856d4);
@@ -24,9 +23,9 @@ header {
                     color: #5134c4;
                     font-weight: 900;
                     font-size: 27px;
-                    
+
                 }
-    
+
                 &:nth-child(2) {
                     font-weight: 100;
                     color: black;
@@ -34,11 +33,12 @@ header {
                 }
             }
         }
-    
+
         &__search {
             .d-row;
             position: relative;
             margin: auto 40px;
+
             #search {
                 box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.25);
                 border-radius: 4px;
@@ -51,6 +51,7 @@ header {
                 outline: none;
                 padding-left: 1rem;
             }
+
             img {
                 position: absolute;
                 right: 10px;
@@ -59,22 +60,23 @@ header {
                 max-height: 100%;
             }
         }
-    
+
         &__contacts {
             display: flex;
             flex-direction: column;
+
             p {
                 font-weight: 500;
                 margin: 3px 0;
                 font-size: 18px;
             }
         }
-    
+
         &__log {
             display: flex;
             flex-direction: row;
             margin-left: auto;
-    
+
             #login,
             #register {
                 padding: 10px 20px;
@@ -86,23 +88,18 @@ header {
                 margin: auto 6px;
                 transition: 0.7s;
             }
+
             #register {
                 border: 1px solid;
-                border-image-source: linear-gradient(
-                    90deg,
-                    #5134c4,
-                    #773cbc,
-                    #b856d4
-                );
+                border-image-source: linear-gradient(90deg,#5134c4, #773cbc,#b856d4);
                 border-image-slice: 1;
-
                 &:hover {
                     background: linear-gradient(90deg, #5134c4, #773cbc, #b856d4);
                     color: white;
                 }
             }
 
-            #login{
+            #login {
                 &:hover {
                     background-color: black;
                     color: white;
@@ -111,12 +108,13 @@ header {
         }
     }
 
-    .services{
+    .services {
+        overflow:hidden ;
         display: flex;
         flex-direction: row;
         padding: 0 200px;
-
-        a{
+        position: f;
+        a {
             margin-top: 40px;
             margin-left: 40px;
             margin-bottom: 35px;
@@ -135,6 +133,7 @@ header {
                 color: white;
                 padding: 10px 50px;
                 margin: auto 0;
+
                 img {
                     max-width: 100%;
                     max-height: 100%;
@@ -155,6 +154,7 @@ header {
                 font-weight: 100;
                 font-size: 19px;
                 margin-left: auto;
+
                 img {
                     max-height: 100%;
                     max-width: 100%;
@@ -182,6 +182,7 @@ header {
             height: 18px;
             border-radius: 50%;
             background: linear-gradient(90deg, #5134c4, #773cbc, #b856d4);
+
             p {
                 font-weight: 900;
                 margin: 2px 5px;
@@ -189,4 +190,3 @@ header {
         }
     }
 }
-
