--- a/general.less
+++ b/general.less
@@ -1,5 +1,5 @@
 //TODO: не импортируются шрифты
-
+@gradient: linear-gradient(90deg, #5134c4, #773cbc, #b856d4);
 @font-face {
     font-family: "Inter-Light";
     font-weight: 100;
@@ -10,6 +10,12 @@
     font-weight: 500;
     src: url("./fonts/Inter/Inter-Regular.ttf");
 }
+@font-face {
+    font-family: "Inter-Bold";
+    font-weight: 900;
+    src: url("./fonts/Inter/Inter-Bold.ttf");
+}
+
 @font-face {
     font-family: "Inter-Bold";
     font-weight: 900;
@@ -43,10 +49,75 @@ body{
 .more(){
     padding: 10px 20px;
     color: white;
-    font-family: light-text;
     font-size: 20px;
     background: @gradient;
     text-decoration: none;
     margin: 20px 0 auto auto;
     border: none;
+    font-weight: 100;
+    transition: 0.3s;
+    &:hover{
+        transform: scale(1.02);
+    }
+}
+
+.slider(){
+    background-color: #F2F2F2;
+    overflow: hidden;
+    .d-row;
+    .slider-line{
+        position: relative;
+        .d-row;
+        width: 200%;
+        left: 0;
+        transition: all ease 0.7s;
+    }
+}
+.sliderBtn(){
+    border: 1.5px solid gray;
+    border-image-source:linear-gradient(90deg, #5134c4,#773cbc,#b856d4);
+    border-image-slice:1;
+    background:linear-gradient(90deg, #5134c4,#773cbc,#b856d4); 
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: #5134c4;
+    font-weight: 900;
+    padding: 0px 7px 7px 7px;
+    font-size: 30px;
+    margin: 20px 0 0 10px;
+}
+.general__log{
+    text-decoration: none;
+    color: black ;
+    padding: 10px 20px;
+    font-size: 20px;
+    text-align: center;
+    border: 1px solid black;
+    font-weight: 500;
+    margin: auto 6px auto 0;
+    transition: 0.4s;
+}
+
+.general__logo(){
+    .d-col;
+    text-decoration: none;
+
+    span {
+        &:nth-child(1) {
+            background: linear-gradient(90deg, #5134c4, #773cbc, #b856d4);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            color: #5134c4;
+            font-weight: 900;
+            font-size: 27px;
+
+        }
+
+        &:nth-child(2) {
+            font-weight: 100;
+            font-size: 18px;
+        }
+    }
 }
