--- a/main/main.less
+++ b/main/main.less
@@ -1,14 +1,15 @@
-@gradient: linear-gradient(90deg, #5134c4, #773cbc, #b856d4);
 @import url("../general.less");
 main {
     padding: 0 100px;
-    margin: 0;
     .d-col;
     .line{
         width: 100%;
         margin-top: 30px;
         border-bottom: 1px solid #ECECEC;
     }
+}
+.main_fixed{
+    margin-top: 90px
 }
 .fd-row{
     .d-row;
@@ -27,8 +28,7 @@ main {
                 visibility: hidden;
             }
             .slide {
-                display: flex;
-                flex-direction: row;
+                .d-row;
                 padding-left: 200px;
                 width: 25%;
                 transition: all 0.6s ease;
@@ -46,7 +46,7 @@ main {
                         font-weight: 900;
                         font-size: 32px;
                         margin: 10px 0;
-                        width: 90%;
+                        width: 100%;
                     }
                     p {
                         font-weight: 100;
@@ -57,8 +57,7 @@ main {
                 }
 
                 &__button {
-                    display: flex;
-                    flex-direction: row;
+                    .d-row;
                     margin-top: 10%;
                     .more {
                         .more;
@@ -79,7 +78,7 @@ main {
                 }
 
                 &__radius {
-                    margin-top: 30px;
+                    margin: 30px 0 0 20px;
                     width: 500px;
                     height: 272px;
                     border-radius: 50%;
@@ -161,16 +160,16 @@ main {
     }
     .card{
         .rent{
-            font-weight: 100;
-            font-size: 20px;
-            color: #A9A9A9;
             margin: 180px 0 5px 0;
         }
     }
 }
+.advantages-row{
+    padding:0 300px;
+    .d-row;
+}
 .advantages{
-    margin: 20px 0 0 20%;
-    width: 280px;
+    margin: 20px 0 0 0;
     box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.25);
     background-color: white;
     .d-col;
@@ -195,47 +194,22 @@ main {
         margin-left: 30px;
     }
 }
-.choose{
-    padding-right: 200px;
-    width: 60%;
-    .d-col;
-    position: relative;
-    .more{
-        .more;
-    }
-    img{
-        margin: -70px 0 0 auto;
-        max-width: 100%;
-    }
-    h1{
-        margin: 0;
-        transform: rotate(90deg);
-        transform-origin: left top 0;
-        position: absolute;
-        font-size: 150px;
-        right: -59%;
-        top: 5%;
-        opacity: 0.1;
-        font-weight: 900;
-    }
-}
 .card {
     position: relative;
+    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.25);
     .d-col;
-    box-shadow: 6px 6px 20px 5px rgba(0, 0, 0, 0.25);
     background-color: white;
-    width: 300px;
-    margin: 0 200px 0 auto;
-    padding: 0 10px ;
+    width: 280px;
+    margin: 0 auto ;
+    padding: 0 10px 10px 10px ;
     cursor: pointer;
     text-decoration: none;
     color: black;
-    &__cubinsForDress{
-        position: absolute;
-        width: 110%;
-        margin:0 0 0 -30px;
-        top: 23px;
-        left: 5px;
+    .rent{
+        font-weight: 100;
+        font-size: 20px;
+        color: #A9A9A9;
+        margin: 150px 0 5px 0;
     }
     h2{
         margin: 10px 0 0 0;
@@ -247,13 +221,13 @@ main {
         font-size: 20px;
         font-weight: 900;
         color: black;
-        margin: 0;
+        margin: 10px 0;
     }
     .discount{
         text-decoration:line-through;
         color: #A9A9A9;
         font-size: 20px;
-        margin: 20px 0 0 0;
+        margin: 10px 0 0 0;
         font-weight: 100;
     }
     &__price{
@@ -262,24 +236,43 @@ main {
         margin: 5px 0 0 0;
     }
     &__bag{
+        cursor: pointer;
         margin: auto 0 auto auto;
         padding: 5px 20px;
-        background:linear-gradient(90deg, #5134c4,#773cbc,#b856d4); 
+        background:@gradient;
         border: none;
         img{
             max-width: 100%;
         }
+    }
+    .card__img{
+        position: absolute;
+        top: 50px;
+        left: -10px;
+        max-width: 100%;
     }
     &__arrow{
         margin:5px 0 0 auto;
         font-size: 24px;
         font-weight: 900;
     }
+    .stars{
+        margin-top: -10px;
+    }
 
 }
-
-
-
+.choose{
+    padding-right: 200px;
+    width: 60%;
+    .d-col;
+    .more{
+        .more;
+    }
+    img{
+        margin: -70px 0 0 auto;
+        max-width: 100%;
+    }
+}
 .content{
     width: 40%;
     margin-top: 50px;
@@ -300,9 +293,8 @@ main {
         font-size: 20px;
         margin: 0 0 20px 0;
     }
-    &__row{
-        display: flex;
-        flex-direction: row;
+    .fd__row{
+        .d-row;
         width: 100%;
         .content__text{
             font-size: 20px;
@@ -321,22 +313,12 @@ main {
                 margin: auto 0 auto 10px;
             }
         }
-        #content__prev,
-        #content__next{
-            border: 1.5px solid gray;
-            border-image-source:linear-gradient(90deg, #5134c4,#773cbc,#b856d4);
-            border-image-slice:1;
-            background:linear-gradient(90deg, #5134c4,#773cbc,#b856d4); 
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-            color: #5134c4;
-            font-weight: 900;
-            font-size: 30px;
-            margin: 20px 0 0 10px;
+        .prev,
+        .next{
+            .sliderBtn()
         }
         
-        #content__prev{
+        .prev{
             border: 1.5px solid gray;
             border-image-source: none;
             -webkit-text-fill-color:gray;
@@ -346,8 +328,7 @@ main {
 }
 .furniture {
     background-color: #F2F2F2;
-    display: flex;
-    flex-direction: row;
+    .d-row;
     margin-right: 200px;
     .content{
         width: 30%;
@@ -356,12 +337,8 @@ main {
         }
     }
     .card {
-        .d-col;
         box-shadow: 3px 1px 10px rgba(0, 0, 0, 0.25);
-        background-color: white;
-        width: 220px;
-        height: 300px;
-        margin: 10px 0 0 ;
+        margin: auto 0 auto 0 ;
         .fd-row img{
             max-width: 100%;
             max-height: 100%;
@@ -369,13 +346,9 @@ main {
             top: -10px;
         }
         .card__img{
-            width: 80%;
             position: absolute;
-            top: 30px;
+            top: 20px;
             left: 20px;
-        }
-        .info{
-            margin: 145px 0 0 0;
         }
         .card__bag{
             position: absolute; 
@@ -389,21 +362,62 @@ main {
         }
     }
     .slider{
-        background-color: #F2F2F2;
-        margin: 50px 0  50px;
-        display: flex;
-        flex-direction: row;
-        width:670px;
-        height: 350px;
-        overflow: hidden;
-        .slider-line{
-            margin-left: 7px;
-            position: relative;
-            display: flex;
-            flex-direction: row;
-            width: 1325px;
-            left: 0;
-            transition: all ease 1s;
+        .slider;
+        width: 50%;
+        padding: 50px 0px 50px 0;
+    }
+}
+
+.katalog{
+    padding: 0 200px;
+    .d-col;
+    .fd_row{
+        .d-row;
+        margin: 20px 0;
+        h2{
+            font-weight: 900;
+            font-size: 30px;
+            margin: 10px 0;
         }
+        .prev,
+        .next{
+            background:@gradient;
+            color: #ffffff;
+            border: none;
+            font-weight: 900;
+            padding: 0px 7px 7px 7px;
+            font-size: 30px;
+            margin: auto 0 auto 20px;
+        }
+        .prev{
+            margin: auto 0 auto auto;
+            background: #cacaca;
+        }
+    }
+    .slider{
+        .slider;
+        background-color: white;
+        width:75%;
+        height: 430px;
+        margin:0 auto;
+    }
+    .card{
+        margin: auto 40px auto 0;
+        .rent{
+            font-weight: 100;
+            font-size: 20px;
+            color: #A9A9A9;
+            margin: 150px 0 5px 0;
+        }
+        .card__img{
+            width: 100%;
+            position: absolute;
+            top: 30px;
+            left: -10px;
+        }
+    }
+    .more{
+        .more;
+        margin:20px auto;
     }
 }
