--- a/footer/footer.css
+++ b/footer/footer.css
@@ -1,1 +1,251 @@
-@font-face{font-family:"Inter-Light";font-weight:100;src:url("fonts/Inter/Inter-Light.ttf")}@font-face{font-family:"Inter-Regular";font-weight:500;src:url("fonts/Inter/Inter-Regular.ttf")}@font-face{font-family:"Inter-Bold";font-weight:900;src:url("fonts/Inter/Inter-Bold.ttf")}body{padding:0;margin:0;font-family:"Inter-Regular",sans-serif}.general__log{text-decoration:none;color:black ;padding:10px 20px;font-size:20px;text-align:center;border:1px solid black;font-weight:500;margin:auto 6px auto 0;transition:.4s}.pd-300{padding:0 300px}.pd-300 h2{font-size:25px;font-weight:900}.answer{margin:10px 0;display:flex;flex-direction:column}.answer__block{box-shadow:4px 2px 20px rgba(0,0,0,0.25);display:flex;flex-direction:column;padding:6px}.answer__block .answer__question{display:flex;flex-direction:row}.answer__block .answer__question .answer__info{color:white;font-size:27px;font-weight:900;background:linear-gradient(90deg, #5134c4, #773cbc, #b856d4);padding:2px 14px;margin:auto 0}.answer__block .answer__question p{font-size:18px;font-weight:500;margin:auto 0 auto 20px}.answer__block .answer__question .answer__open{background:linear-gradient(90deg, #5134c4, #773cbc, #b856d4);-webkit-background-clip:text;background-clip:text;-webkit-text-fill-color:transparent;color:#5134c4;font-weight:900;font-size:30px;margin:0 0 0 auto;transition:.3s ease-out;cursor:pointer}.answer__content{transition:.3s ease-out;overflow:hidden;max-height:0;font-size:15px;font-weight:500}.answer .active{max-height:100%;margin:15px 0}.basement{position:relative;background-color:#19103C;margin-top:120px;display:flex;flex-direction:column;padding:0 300px}.basement__block{box-shadow:4px 2px 20px rgba(0,0,0,0.25);position:absolute;width:1100px;top:-90px;background:linear-gradient(90deg, #5134c4, #773cbc, #b856d4);color:white;padding:25px 100px;display:flex;flex-direction:row}.basement__block .basement__col{display:flex;flex-direction:column;width:60%}.basement__block .basement__col h2{margin:0 0 20px 0;font-weight:900;font-size:25px}.basement__block .basement__col p{margin:0;width:70%;font-size:20px;font-weight:100}.basement__block .basement__col .login,.basement__block .basement__col .register{text-decoration:none;color:black ;padding:10px 20px;font-size:20px;text-align:center;border:1px solid black;font-weight:500;margin:auto 6px auto 0;transition:.4s;background-color:white;border:none}.basement__block .basement__col .register{background:#19103C;color:white;border:none}.basement__block .basement__col h3:first-child{margin:0 0 auto 0}.basement__block .basement__col h3:last-child{margin:auto 0 0 0}.basement__content{margin:120px 0 40px 0;display:flex;flex-direction:row}.basement__content .d-col{margin:0 130px 0 0;display:flex;flex-direction:column}.basement__content .d-col .basement__logo{margin:0 0 30px 0;display:flex;flex-direction:column;text-decoration:none}.basement__content .d-col .basement__logo span:nth-child(1){background:linear-gradient(90deg, #5134c4, #773cbc, #b856d4);-webkit-background-clip:text;background-clip:text;-webkit-text-fill-color:transparent;color:#5134c4;font-weight:900;font-size:27px}.basement__content .d-col .basement__logo span:nth-child(2){font-weight:100;font-size:18px}.basement__content .d-col .prava{text-decoration:none;color:#586AC6;margin:8px 0}.basement__content .d-col h4{font-size:18px;font-weight:900;color:white;margin:0 0 20px 0}.basement__content .d-col a,.basement__content .d-col p{text-decoration:none;color:white;margin:7px 0;font-weight:100;font-size:15px}.basement__content .d-col p{font-size:17px}.basement__content .d-col img{max-width:100%}.basement__content .d-col:last-child{margin:0}
+@font-face {
+  font-family: "Inter-Light";
+  font-weight: 100;
+  src: url("../fonts/Inter/Inter-Light.ttf");
+}
+@font-face {
+  font-family: "Inter-Regular";
+  font-weight: 500;
+  src: url("../fonts/Inter/Inter-Regular.ttf");
+}
+@font-face {
+  font-family: "Inter-Bold";
+  font-weight: 900;
+  src: url("../fonts/Inter/Inter-Bold.ttf");
+}
+body {
+  padding: 0;
+  margin: 0;
+  font-family: "Inter-Regular", sans-serif;
+}
+
+.basement__content, .basement__block, .answer__block .answer__question {
+  display: flex;
+  flex-direction: row;
+}
+
+.basement__content .d-col .block, .basement__content .d-col .basement__logo, .basement__content .d-col, .basement__block .basement__col, .basement, .answer__block, .answer {
+  display: flex;
+  flex-direction: column;
+}
+
+.basement__block .basement__col .login,
+.basement__block .basement__col .register {
+  text-decoration: none;
+  color: black;
+  padding: calc( 0.0033482143 * 100vw + 3.5714285714px ) 20px;
+  font-size: calc( 0.003125 * 100vw + 14px );
+  text-align: center;
+  border: 1px solid black;
+  font-weight: 500;
+  margin: auto 4px;
+  transition: 0.4s;
+}
+
+.basement__content .d-col .basement__logo {
+  text-decoration: none;
+}
+.basement__content .d-col .basement__logo span:nth-child(1) {
+  background: linear-gradient(90deg, #5134c4, #773cbc, #b856d4);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: #5134c4;
+  font-weight: 900;
+  font-size: calc( 0.004375 * 100vw + 18.6px );
+}
+.basement__content .d-col .basement__logo span:nth-child(2) {
+  font-weight: 100;
+  font-size: calc( 0.003125 * 100vw + 12px );
+}
+
+.pd-100 {
+  padding: 0 calc( 0.1116071429 * 100vw + -114.2857142857px );
+}
+.pd-100 h2 {
+  font-size: calc( 0.005 * 100vw + 15.4px );
+  font-weight: 900;
+}
+
+.answer {
+  padding: 0 calc( 0.121875 * 100vw + -34px );
+  margin: 10px 0;
+}
+.answer__block {
+  box-shadow: 4px 2px 20px rgba(0, 0, 0, 0.25);
+  padding: 6px;
+}
+.answer__block .answer__question .answer__info {
+  color: white;
+  font-size: calc( 0.003125 * 100vw + 21px );
+  font-weight: 900;
+  background: linear-gradient(90deg, #5134c4, #773cbc, #b856d4);
+  padding: 2px 14px;
+  margin: auto 0;
+}
+.answer__block .answer__question p {
+  font-size: calc( 0.001875 * 100vw + 14.4px );
+  font-weight: 500;
+  margin: auto 0 auto 20px;
+}
+.answer__block .answer__question .answer__open {
+  background: linear-gradient(90deg, #5134c4, #773cbc, #b856d4);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: #5134c4;
+  font-weight: 900;
+  font-size: 30px;
+  margin: 0 0 0 auto;
+  transition: 0.3s ease-out;
+  cursor: pointer;
+}
+.answer__content {
+  transition: 0.3s ease-out;
+  overflow: hidden;
+  max-height: 0;
+  font-size: 15px;
+  font-weight: 500;
+}
+.answer .active {
+  max-height: 100%;
+  margin: 15px 0;
+}
+
+.basement {
+  position: relative;
+  background-color: #19103C;
+  margin-top: 120px;
+  padding: 0 calc( 0.1116071429 * 100vw + -114.2857142857px );
+}
+.basement__block {
+  box-shadow: 4px 2px 20px rgba(0, 0, 0, 0.25);
+  position: absolute;
+  width: calc( 0.4423076923 * 100vw + 275.7692307692px );
+  top: -90px;
+  background: linear-gradient(90deg, #5134c4, #773cbc, #b856d4);
+  color: white;
+  margin: 0 calc( 0.125 * 100vw + -40px );
+  padding: calc( 0.008125 * 100vw + 9.4px ) calc( 0.046875 * 100vw + 10px );
+}
+.basement__block .basement__col {
+  width: 60%;
+}
+.basement__block .basement__col h2 {
+  margin: 0 0 calc( 0.00625 * 100vw + 8px ) 0;
+  font-size: calc( 0.005 * 100vw + 15.4px );
+}
+.basement__block .basement__col p {
+  width: 90%;
+  margin: 0;
+  font-size: calc( 0.004375 * 100vw + 11.6px );
+}
+.basement__block .basement__col .login,
+.basement__block .basement__col .register {
+  background-color: white;
+  border: none;
+}
+.basement__block .basement__col .register {
+  background: #19103C;
+  color: white;
+  border: none;
+}
+.basement__block .basement__col h3 {
+  font-size: calc( 0.003125 * 100vw + 14px );
+  margin: 0 0 auto 0;
+}
+.basement__block .basement__col h3:last-child {
+  margin: auto 0 0 0;
+}
+.basement__content {
+  padding: 0 calc( 0.121875 * 100vw + -34px );
+  margin: calc( 0.0375 * 100vw + 48px ) 0 40px 0;
+}
+.basement__content .d-col {
+  margin: 0 calc( 0.0669642857 * 100vw + 1.4285714286px ) 0 0;
+}
+.basement__content .d-col .block .prava {
+  text-decoration: none;
+  color: #586AC6;
+  margin: 8px 0;
+}
+.basement__content .d-col h4 {
+  font-size: calc( 0.003125 * 100vw + 12px );
+  font-weight: 900;
+  color: white;
+  margin: 0 0 20px 0;
+}
+.basement__content .d-col a,
+.basement__content .d-col p {
+  text-decoration: none;
+  color: white;
+  margin: 7px 0;
+  font-size: calc( 0.003125 * 100vw + 9px );
+}
+.basement__content .d-col:last-child {
+  margin: 0;
+}
+
+@media (max-width: 970px) {
+  .basement__block {
+    width: calc( 0.6469230769 * 100vw + 62.4846153846px );
+    display: flex;
+    flex-direction: column;
+  }
+  .basement__block .basement__col:nth-child(1) p {
+    display: none;
+  }
+  .basement__block .basement__col {
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
+  }
+  .basement__block .basement__col h3 {
+    display: none;
+  }
+}
+@media (max-width: 670px) {
+  .basement .basement__content {
+    display: flex;
+    flex-direction: column;
+  }
+  .basement .basement__content .d-col {
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+  }
+  .basement .basement__content .d-col .block {
+    margin: 0 0 10px auto;
+  }
+  .basement .basement__content .d-col .block .prava {
+    margin: 4px 0;
+  }
+  .basement .basement__content .d-col:nth-child(2),
+.basement .basement__content .d-col:nth-child(3) {
+    padding: 10px;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+  }
+  .basement .basement__content .d-col:nth-child(2) a,
+.basement .basement__content .d-col:nth-child(3) a {
+    display: none;
+  }
+  .basement .basement__content .d-col:nth-child(2) h4,
+.basement .basement__content .d-col:nth-child(3) h4 {
+    margin: auto 0;
+  }
+  .basement .basement__content .d-col:last-child {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+  .basement__block {
+    margin: 0;
+    box-shadow: 0;
+    width: calc( 0.9060606061 * 100vw + -20.0606060606px );
+  }
+  .basement__block .basement__col .login,
+.basement__block .basement__col .register {
+    margin: auto 0;
+  }
+}/*# sourceMappingURL=footer.css.map */
