--- a/general.css
+++ b/general.css
@@ -1,1 +1,20 @@
-@font-face{font-family:"Inter-Light";font-weight:100;src:url("fonts/Inter/Inter-Light.ttf")}@font-face{font-family:"Inter-Regular";font-weight:500;src:url("fonts/Inter/Inter-Regular.ttf")}@font-face{font-family:"Inter-Bold";font-weight:900;src:url("fonts/Inter/Inter-Bold.ttf")}@font-face{font-family:"Inter-Bold";font-weight:900;src:url("fonts/Inter/Inter-Bold.ttf")}body{padding:0;margin:0;font-family:"Inter-Regular",sans-serif}.general__log{text-decoration:none;color:black ;padding:10px 20px;font-size:20px;text-align:center;border:1px solid black;font-weight:500;margin:auto 6px auto 0;transition:.4s}
+@font-face {
+  font-family: "Inter-Light";
+  font-weight: 100;
+  src: url("../fonts/Inter/Inter-Light.ttf");
+}
+@font-face {
+  font-family: "Inter-Regular";
+  font-weight: 500;
+  src: url("../fonts/Inter/Inter-Regular.ttf");
+}
+@font-face {
+  font-family: "Inter-Bold";
+  font-weight: 900;
+  src: url("../fonts/Inter/Inter-Bold.ttf");
+}
+body {
+  padding: 0;
+  margin: 0;
+  font-family: "Inter-Regular", sans-serif;
+}/*# sourceMappingURL=general.css.map */
