--- a/footer/footer.css
+++ b/footer/footer.css
@@ -1,17 +1,23 @@
 @font-face {
   font-family: "Inter-Light";
+  font-style: normal;
   font-weight: 100;
   src: url("../fonts/Inter/Inter-Light.ttf");
+  font-display: swap;
 }
 @font-face {
+  font-style: normal;
   font-family: "Inter-Regular";
   font-weight: 500;
   src: url("../fonts/Inter/Inter-Regular.ttf");
+  font-display: swap;
 }
 @font-face {
+  font-style: normal;
   font-family: "Inter-Bold";
   font-weight: 900;
   src: url("../fonts/Inter/Inter-Bold.ttf");
+  font-display: swap;
 }
 body {
   padding: 0;
@@ -166,7 +172,7 @@ body {
 }
 .basement__content .d-col .block .prava {
   text-decoration: none;
-  color: #586AC6;
+  color: #8a9dff;
   margin: 8px 0;
 }
 .basement__content .d-col h4 {
@@ -181,6 +187,11 @@ body {
   color: white;
   margin: 7px 0;
   font-size: calc( 0.003125 * 100vw + 9px );
+}
+.basement__content .d-col a img,
+.basement__content .d-col p img {
+  max-width: 100%;
+  max-height: 100%;
 }
 .basement__content .d-col:last-child {
   margin: 0;
