--- a/footer/footer.scss
+++ b/footer/footer.scss
@@ -122,7 +122,7 @@
                 @extend %d-col;
                 .prava{
                     text-decoration: none;
-                    color:#586AC6;
+                    color:#8a9dff;
                     margin: 8px 0;
                 }
             }
@@ -138,6 +138,10 @@
                 color: white;
                 margin: 7px 0;
                 font-size:calcFluid(10, 15, 320, 1920) ;
+                img{
+                    max-width: 100%;
+                    max-height: 100%;
+                }
             }
             &:last-child{
                 margin: 0 ;
