--- a/main/main.css
+++ b/main/main.css
@@ -1,17 +1,23 @@
 @font-face {
   font-family: "Inter-Light";
+  font-style: normal;
   font-weight: 100;
   src: url("../fonts/Inter/Inter-Light.ttf");
+  font-display: swap;
 }
 @font-face {
+  font-style: normal;
   font-family: "Inter-Regular";
   font-weight: 500;
   src: url("../fonts/Inter/Inter-Regular.ttf");
+  font-display: swap;
 }
 @font-face {
+  font-style: normal;
   font-family: "Inter-Bold";
   font-weight: 900;
   src: url("../fonts/Inter/Inter-Bold.ttf");
+  font-display: swap;
 }
 body {
   padding: 0;
@@ -19,7 +25,11 @@ body {
   font-family: "Inter-Regular", sans-serif;
 }
 
-.katalog .katalog-row, .furniture, .content .fd-row, .advantages-row, .fd-row .slider .slides .slide__button, .fd-row .slider .slides .slide, .fd-row, .katalog .slider .slider-line, .furniture .slider .slider-line, .katalog .slider, .furniture .slider {
+main {
+  padding: 0 calc( 0.1116071429 * 100vw + -114.2857142857px );
+}
+
+.katalog .katalog-row, .furniture, .content .fd-row, .card .card__sale, .advantages-row, .fd-row .slider .slides .slide__button, .fd-row .slider .slides .slide, .fd-row, .katalog .slider .slider-line, .furniture .slider .slider-line, .katalog .slider, .furniture .slider {
   display: flex;
   flex-direction: row;
 }
@@ -66,9 +76,6 @@ body {
   font-weight: 900;
 }
 
-main {
-  padding: 0 calc( 0.1116071429 * 100vw + -114.2857142857px );
-}
 main .line {
   width: 100%;
   margin-top: 30px;
@@ -199,7 +206,6 @@ main .line {
 }
 .fd-row .card {
   margin: 0 calc( 0.12 * 100vw + -30.4px ) 0 0;
-  width: calc( 0.0892857143 * 100vw + 108.5714285714px );
 }
 
 .advantages-row {
@@ -233,14 +239,14 @@ main .line {
   box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.25);
   background-color: white;
   width: 280px;
-  padding: 0 10px 10px 10px;
+  padding: 10px;
   cursor: pointer;
   text-decoration: none;
   color: black;
 }
 .card .rent {
   font-size: calc( 0.003125 * 100vw + 14px );
-  color: #A9A9A9;
+  color: #58585e;
   margin: 10px 0 10px 0;
 }
 .card .info {
@@ -250,34 +256,37 @@ main .line {
 }
 .card__bag {
   cursor: pointer;
-  margin: auto 0 auto auto;
+  margin: auto 0 0 auto;
   padding: calc( 0.0024590164 * 100vw + 0.2786885246px ) calc( 0.0040983607 * 100vw + 12.131147541px );
   background: linear-gradient(90deg, #5134c4, #773cbc, #b856d4);
   border: none;
 }
 .card .card__img {
   width: 100%;
+  margin: auto 0 0 0;
 }
 .card__arrow {
-  margin: 5px 0 0 auto;
+  margin: auto 0 auto auto;
   font-size: 24px;
   font-weight: 900;
 }
-.card .stars {
-  margin-top: -10px;
+.card .star {
+  font-size: calc( 0.0049180328 * 100vw + 10.5573770492px );
+  font-weight: 900;
+  margin: auto 0;
 }
-.card .fd-row {
+.card .card__sale {
   margin: auto 0 0 0;
 }
-.card .fd-row .fd-col .discount {
+.card .card__sale .fd-col .discount {
   text-decoration: line-through;
-  color: #A9A9A9;
+  color: #58585e;
   font-size: calc( 0.003125 * 100vw + 14px );
   margin: calc( 0.0093457944 * 100vw + -7.9439252336px ) 0 0 0;
 }
-.card .fd-row .fd-col .card__price {
+.card .card__sale .fd-col .card__price {
   font-size: calc( 0.001875 * 100vw + 16.4px );
-  font-weight: 500;
+  font-weight: 900;
   margin: 0;
 }
 
@@ -325,7 +334,7 @@ main .line {
   color: black;
 }
 .content h3 {
-  opacity: 0.2;
+  color: #58585e;
   font-weight: 900;
   font-size: calc( 0.004375 * 100vw + 16.6px );
   margin: 0;
@@ -388,7 +397,7 @@ main .line {
 }
 .furniture .card .card__img {
   width: 60%;
-  margin: 0 auto;
+  margin: auto auto 0 auto;
 }
 .furniture .card .card__bag {
   position: absolute;
@@ -512,15 +521,15 @@ main .line {
     display: block;
   }
 
-  .card .fd-row .fd-col {
+  .card .card__sale .fd-col {
     display: flex;
     flex-direction: row-reverse;
     margin: 10px 0;
   }
-  .card .fd-row .fd-col .card__price {
+  .card .card__sale .fd-col .card__price {
     margin: 0 10px 0 0;
   }
-  .card .fd-row .fd-col .discount {
+  .card .card__sale .fd-col .discount {
     margin: auto 0;
   }
 
