--- a/footer/footer.scss
+++ b/footer/footer.scss
@@ -41,6 +41,7 @@
                 margin: 0 0 0 auto;
                 transition:0.3s ease-out;
                 cursor: pointer;
+                transform: rotate(90deg);
             }
         }
     }
